# gitreal

./: README.md
backend/: .gitignore  README.md  main.py  pyproject.toml
frontend/: package.json  tailwind.config.js
frontend/src/: App.js  Home.js  Login.js  Navbar.js  UploadPage.js  UserFrame.js  global.js  index.js
