[tool.poetry]
name = "gitreal"
version = "0.1.0"
description = ""
authors = ["Lucas Sta Maria <lucas@priime.dev>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
